# xclabel

./: .dockerignore  .env.example  .gitignore  AiUtils.py  CLAUDE.md  Dockerfile  Dockerfile.deploy.cpu  Dockerfile.deploy.gpu  Dockerfile.server.cpu  Dockerfile.server.gpu  README.md  ai_manager.py  app.py  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: docker-publish-deploy-cpu.yml  docker-publish-deploy-gpu.yml  docker-publish-nndeploy.yml  docker-publish-server-cpu.yml  docker-publish-server-gpu.yml  docker-publish.yml
data/workflows/: demo-seg-pipeline.json  demo-seg-pipeline.yaml  my_pipeline.json  my_pipeline.yaml  sv30.json  sv30.yaml  yolo-detect-preview.json  yolo-detect-preview.yaml
deploy/: Dockerfile.cpu  Dockerfile.gpu  engine_pool.py  main.py  nndeploy_adapter.py  pipeline_manager.py  requirements.txt  server_client.py  vllm_client.py  yolo_adapter.py
deploy/demo/: README.md  demo-seg-pipeline.yaml  predict_model.py  run_custom_workflow.py  run_server_workflow.py  run_workflow.py
deploy/static/: test.html
docs/superpowers/plans/: 2026-06-17-smart-labeling-plan.md  2026-06-18-sam2-download-plan.md  (+5 more)
nndeploy-app/: Dockerfile  requirements.txt
plugins/: export_yolo.py  train_yolo.py
static/: script.js  style.css
templates/: ai_config.html  file_manager.html  index.html  model-test.html  projects.html  train.html  workflow.html
tests/: auto_label.py  auto_label_video.py  test_api.py  test_llpr.py  test_mask_processor.py
(+72 files in other folders)
